--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,4 +23,4 @@ jobs:
     - name: Install Clippy
       run: rustup component add clippy
     - name: Run Clippy
-      run: cargo clippy --all-targets --all-features -- -D warnings -A clippy::needless-lifetimes
+      run: cargo clippy --all-targets --all-features -- -D warnings -D clippy::pedantic
