--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        toolchain: [nightly]
+        toolchain: [beta, stable, nightly]
 
     steps:
     - uses: actions/checkout@v1
@@ -20,6 +20,7 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+      if: matrix.toolchain == 'nightly'
     - name: Install Clippy
       run: rustup component add clippy
     - name: Run Clippy
