--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "backoff-futures"
 description = "A retry and backoff mechanism for `std::future::Future`"
-version = "0.1.1"
+version = "0.2.0-alpha.1"
 
 authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
 keywords = ["backoff", "exponential", "futures"]
@@ -12,7 +12,7 @@ edition = "2018"
 
 [dependencies]
 backoff = "0.1"
-tokio-timer = "0.2.0-alpha.2"
+tokio-timer = "0.3.0-alpha.5"
 
 [dev-dependencies]
 futures-preview = "0.3.0-alpha.18"
