--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "backoff-futures"
 description = "A retry and backoff mechanism for `std::future::Future`"
-version = "0.2.0-alpha.2"
+version = "0.2.0"
 
 authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
 keywords = ["backoff", "exponential", "futures"]
@@ -12,9 +12,9 @@ edition = "2018"
 
 [dependencies]
 backoff = "0.1"
-tokio-timer = "0.3.0-alpha.6"
+tokio = { version = "0.2.1", features = ["time"] }
 
 [dev-dependencies]
-futures-preview = "0.3.0-alpha.19"
+futures = "0.3"
 isahc = "0.7"
 matches = "0.1"
