--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,14 +11,16 @@ jobs:
 
     strategy:
       matrix:
-        toolchain: [beta, nightly]
+        toolchain: [stable, beta, nightly]
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Install Rust
-      run: rustup default $TOOLCHAIN
-      env:
-        TOOLCHAIN: ${{ matrix.toolchain }}
+    - uses: actions/checkout@v2
+    - uses: actions-rs/toolchain@v1
+      with:
+        profile: minimal
+        toolchain: ${{ matrix.toolchain }}
+        override: true
+        components: clippy
     - name: Build
       run: cargo build --verbose
     - name: Run tests
