--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "backoff-futures"
 description = "A retry and backoff mechanism for `std::future::Future`"
-version = "0.3.0"
+version = "0.4.0-dev"
 
 authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
 keywords = ["backoff", "exponential", "futures"]
@@ -12,7 +12,8 @@ edition = "2018"
 
 [dependencies]
 async-trait = "0.1"
-backoff = "0.1"
+# backoff = "0.1"
+backoff = { git = "https://github.com/ihrwein/backoff.git" }
 tokio = { version = "0.2.1", features = ["time"] }
 
 [dev-dependencies]
